can now manage arguments in frontend
